--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load static%}
+{% load i18n %}
 {% block content%}
 <div class="container">
     <h1>Contact</h1>
     <hr>
     <div>Email: <strong>grupo.pierola.ro@gmail.com</strong></div>
-    <div>Numar de telefon: <strong>0744924342</strong></div>
+    <div>{% trans "Numar de telefon"%}:<strong>07xxxxxxxx</strong></div>
 </div>
 {% endblock%}
