--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                             <ul class="dropdown-menu text-center border-0 wines-dropdown" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">{% trans "Toate" %} </a></li>
                                 {% for color in colors %}
-                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color={{color}}">{% trans "{{color}}" %}</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color={{color}}">{{color}}</a></li>
                                 {% endfor %}
                             </ul>
                         </li>
