--- a/wines/templates/wines/includes/mobile_filters.html
+++ b/wines/templates/wines/includes/mobile_filters.html
@@ -1,36 +1,37 @@
-  <div class="col-sm-12  mb-2" id="filter">
-        <div class="accordion " id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+{% load i18n %}
+<div class="col-sm-12  mb-2" id="filter">
+    <div class="accordion " id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed border-0 bg-danger rounded-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Filtre
+                    {% trans "Filtre"%}
                 </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <div class="row mb-1">
                         <div class="col-12">
                             <div class="form-floating text-danger">
                                 <select class="form-select text-danger" id="color" aria-label="Floating label select example">
-                                    <option value="reset">Oricare</option>
+                                    <option value="reset">{% trans "Oricare"%}</option>
                                     {% for color in colors %}
                                     <option value="{{color}}" {% if color in categories %}selected{% endif %}>{{color}}</option>
                                     {% endfor %}
                                 </select>
-                                <label for="color">Culoare</label>
+                                <label for="color">{% trans "Culoare"%}</label>
                             </div>
                         </div>
                     </div>
                     <div class="row mb-1">
                         <div class="col-12">
                             <div class="form-floating text-danger">
-                                <select class="form-select text-danger"" id="region" aria-label="Floating label select example">
-                                    <option value="reset">Oricare</option>
+                                <select class="form-select text-danger" " id="region" aria-label="Floating label select example">
+                                    <option value="reset">{% trans "Oricare"%}</option>
                                     {% for region in regions%}
-                                        <option value="{{region.name}}"{% if region.name in categories %}selected{% endif %}>{{region.name}}</option>
+                                    <option value="{{region.name}}" {% if region.name in categories %}selected{% endif %}>{{region.name}}</option>
                                     {% endfor %}
                                 </select>
-                                <label for="region">Regiunea</label>
+                                <label for="region">{% trans "Regiunea"%}</label>
                             </div>
                         </div>
                     </div>
@@ -38,14 +39,14 @@
                         <div class="col-12">
                             <div class="form-floating text-danger">
                                 <select class="form-select text-danger" id="grape">
-                                    <option value="reset">Oricare</option>
+                                    <option value="reset">{% trans "Oricare"%}</option>
                                     {% for grape in grapes %}
-                                        <option value="{{grape.name}}"{% if grape.name in categories %}selected{% endif %}>
-                                            {{grape.name}}
-                                        </option>
-                                        {% endfor %}
+                                    <option value="{{grape.name}}" {% if grape.name in categories %}selected{% endif %}>
+                                        {{grape.name}}
+                                    </option>
+                                    {% endfor %}
                                 </select>
-                                <label for="grape">Struguri</label>
+                                <label for="grape">{% trans "Struguri"%}</label>
                             </div>
                         </div>
                     </div>
@@ -53,11 +54,11 @@
                         <div class="col-12">
                             <div class="form-floating text-danger">
                                 <select class="form-select text-danger" id="price" aria-label="Floating label select example">
-                                    <option value="reset">Aleatoriu</option>
-                                    <option value="price_asc" {% if 'price_asc' in categories %}selected{% endif %}>Ascendent</option>
-                                    <option value="price_desc" {% if 'price_desc' in categories %}selected{% endif %}>Descendent</option>
+                                    <option value="reset">{% trans "Aleatoriu"%}</option>
+                                    <option value="price_asc" {% if 'price_asc' in categories %}selected{% endif %}>{% trans "Ascendent"%}</option>
+                                    <option value="price_desc" {% if 'price_desc' in categories %}selected{% endif %}>{% trans "Descendent"%}</option>
                                 </select>
-                                <label for="price">Pret</label>
+                                <label for="price">{% trans "Pret"%}</label>
                             </div>
                         </div>
                     </div>
@@ -65,11 +66,11 @@
                         <div class="col-12">
                             <div class="form-floating text-danger">
                                 <select class="form-select text-danger" id="rating" aria-label="Floating label select example">
-                                    <option value="reset" selected>Aleatoriu</option>
-                                    <option value="rating_asc" {% if 'rating_asc' in categories %}selected{% endif %}>Ascendent</option>
-                                    <option value="rating_desc" {% if 'rating_desc' in categories %}selected{% endif %}>Descendent</option>
+                                    <option value="reset" selected>{% trans "Aleatoriu"%}</option>
+                                    <option value="rating_asc" {% if 'rating_asc' in categories %}selected{% endif %}>{% trans "Ascendent"%}</option>
+                                    <option value="rating_desc" {% if 'rating_desc' in categories %}selected{% endif %}>{% trans "Descendent"%}</option>
                                 </select>
-                                <label for="rating">Rating</label>
+                                <label for="rating">{% trans "Rating"%}</label>
                             </div>
                         </div>
                     </div>
