--- a/wines/templates/wines/includes/wine_card.html
+++ b/wines/templates/wines/includes/wine_card.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <div class="col-s12 col-md-6 col-lg-3 mb-4 rounded-1 ">
     <a class="text-decoration-none" href="{% url 'wine_details' wine.id %}">
         <div class="card shadow-lg pt-4 border-0">
             <span class="badge text-dark bg-warning price-tag p-1">
-                {{wine.rating }} 
+                {{wine.rating }}
                 <i class="fas fa-star fa-sm"></i>
             </span>
             <a class="text-decoration-none mx-auto" href="{% url 'wine_details' wine.id %}">
@@ -17,24 +18,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 text-center"> 
-                        Regiunea <strong> {{wine.region}}</strong>
+                    <div class="col-12 text-center">
+                        {% trans "Regiunea"%} <strong> {{wine.region}}</strong>
                     </div>
                 </div>
                 <form class="card-form" method="POST" action="{% url 'add_to_bag' wine.id %}" data-wine_id={{wine.id}}>
-                        {% csrf_token %}
+                    {% csrf_token %}
                     <div class="row">
-                        <div class="col-6"> 
-                            <select class="form-control form-control-sm border-0 size" name="wine_size"> 
-                            {% for sizeDetails in wine.size_details_set.all %}
+                        <div class="col-6">
+                            <select class="form-control form-control-sm border-0 size" name="wine_size">
+                                {% for sizeDetails in wine.size_details_set.all %}
                                 <option value="{{sizeDetails.size}}" data-quantity_available="{{sizeDetails.qty_available}}" data-price_size="{{sizeDetails.price}}">
                                     {{sizeDetails.size}}
                                 </option>
-                            {% endfor %}
-                            </select></div>
+                                {% endfor %}
+                            </select>
+                        </div>
                         <div class="col-6 text-center px-0">
                             <strong class="price_slot ">
-                            <!--price set through js-->
+                                <!--price set through js-->
                             </strong>
                         </div>
                     </div>
@@ -47,8 +49,8 @@
                             <button type="submit" class="btn btn-danger rounded-0 w-100"><i class="fas fa-shopping-cart"></i></button>
                         </div>
                     </div>
-                </form> 
-            </div>   
+                </form>
+            </div>
         </div>
     </a>
 </div>
