--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load bag_tools %}
 {% load static %}
 {% block content %}
 <div class="container">
-    <h1 class="mb-3 d-flex"> Cosul tau de cumparaturi </h1>
+    <h1 class="mb-3 d-flex"> {% trans "Cosul tau de cumparaturi" %} </h1>
     {% if not bag_items %}
-    <p class="my-auto mx-auto">Cosul de cumparaturi este gol. <a class="link link-danger" href="{% url 'wines_view' %}">Descopera vinurile Grupo Pierola</a></p>
+    <p class="my-auto mx-auto">{% trans "Cosul de cumparaturi este gol." %} <a class="link link-danger" href="{% url 'wines_view' %}">{% trans "Catre Vinuri" %}</a></p>
     {% else %}
     <div class="container">
         {% for item in bag_items %}
@@ -41,11 +42,11 @@
                     <input type="hidden" name="size" value="{{item.size}}">
                 </form>
                 <a class="text-decoration-none text-info update_link">
-                    Update
+                    {% trans "Update" %}
                 </a>
             </div>
             <div class="col-2 my-auto text-center px-0">
-                <span>Price:</span>
+                <span>{% trans "Price" %}:</span>
                 <strong>{{item.price}} RON</strong>
             </div>
             <div class="col-2 my-auto text-center px-0">
@@ -60,12 +61,12 @@
         <div class="col-auto"><small>Total:</small></div>
         <div class="col-auto"><strong>{{total}} RON</strong></div>
     </div>
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center mb-4">
         <div class="col-auto ml-auto ">
-            <a href="{% url 'wines_view' %}" class="btn btn-dark rounded-0 w-100"><i class="fas fa-chevron-left"></i><strong>  INCA CEVA</strong></a>
+            <a href="{% url 'wines_view' %}" class="btn btn-dark rounded-0 w-100"><i class="fas fa-chevron-left"></i>  <strong>{% trans "Catre Vinuri" %}</strong></a>
         </div>
         <div class="col-auto mr-auto ">
-            <a href="{% url 'checkout' %}" class="btn btn-info rounded-0 w-100"><strong>CHECKOUT    </strong><i class="fas fa-chevron-right"></i></a>
+            <a href="{% url 'checkout' %}" class="btn btn-info rounded-0 w-100"><strong>{% trans "CHECKOUT" %}  </strong><i class="fas fa-chevron-right"></i></a>
         </div>
     </div>
 </div>
@@ -74,32 +75,31 @@
 {% block postload_js %}
 <script type="text/javascript">
     // function that enables or disable the buttons
-$('.update_link').click(function(e){
-    var form = $(this).prev();
-    console.log(form);
-    form.submit();
-})
-function handleEnableDisable(qty_input)
-    {
+    $('.update_link').click(function (e) {
+        var form = $(this).prev();
+        console.log(form);
+        form.submit();
+    })
+    function handleEnableDisable(qty_input) {
         var currentInput = parseInt($(qty_input).val());
         var minusDisabled = currentInput < 1;
-        var plusDisabled = currentInput >= 99; 
+        var plusDisabled = currentInput >= 99;
         $(qty_input).prev('.input-group-preppend').find('.decrement-qty').prop('disabled', minusDisabled);
         $(qty_input).next('.input-group-append').find('.increment-qty').prop('disabled', plusDisabled);
     }
-$('.decrement-qty').click(function(e){
-    e.preventDefault();
-    var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-    var currentValue = parseInt($(closestInput).val());
-    $(closestInput).val(currentValue - 1);
-    handleEnableDisable(closestInput);
-})
-$('.increment-qty').click(function(e){
-    e.preventDefault();
-    var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-    var currentValue = parseInt($(closestInput).val());
-    $(closestInput).val(currentValue + 1);
-    handleEnableDisable(closestInput);
-})
+    $('.decrement-qty').click(function (e) {
+        e.preventDefault();
+        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+        var currentValue = parseInt($(closestInput).val());
+        $(closestInput).val(currentValue - 1);
+        handleEnableDisable(closestInput);
+    })
+    $('.increment-qty').click(function (e) {
+        e.preventDefault();
+        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+        var currentValue = parseInt($(closestInput).val());
+        $(closestInput).val(currentValue + 1);
+        handleEnableDisable(closestInput);
+    })
 </script>
 {% endblock %}
