--- a/security/templates/security/access_denied.html
+++ b/security/templates/security/access_denied.html
@@ -1,24 +1,25 @@
 {% load static %}
+{% load i18n %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <title>Cerinte</title>
-  </head>
-  <body>
-      <div class="container">
-          <h1 class="mt-3 text-center mb-5"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}">Grupo Pierola Romania</a></h1>
-          <h5 class="text-center">Ne pare rau dar nu poti vizita website-ul deoarece nu inteplinesti cel putin una din cerintele mentionate anterior.</h5>
-          <h5 class="text-center mb-5">Te reasteptam cu drag, <strong>Grupo Pierola Romania!</strong> </h5>
-          <div class="row d-md-flex justify-content-center">
-              <div class="col-sm-12 col-md-2"><a class="btn btn-info" href="{% url 'requirements' %}">Catre cerinte</a></div>
-          </div>
-      </div>
-   
-  </body>
+</head>
+<body>
+    <div class="container">
+        <h1 class="mt-3 text-center mb-5"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}">Grupo Pierola Romania</a></h1>
+        <h5 class="text-center">{% trans "Ne pare rau dar nu poti vizita website-ul deoarece nu inteplinesti cel putin una din cerintele mentionate anterior." %}</h5>
+        <h5 class="text-center mb-5">{% trans "Te reasteptam cu drag" %}, <strong>Grupo Pierola Romania!</strong> </h5>
+        <div class="row d-md-flex justify-content-center">
+            <div class="col-sm-12 col-md-2"><a class="btn btn-info" href="{% url 'requirements' %}">{% trans "Catre cerinte" %}</a></div>
+        </div>
+    </div>
+
+</body>
 </html>
