--- a/security/templates/security/requirements.html
+++ b/security/templates/security/requirements.html
@@ -1,36 +1,37 @@
 {% load static %}
+{% load i18n %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <title>Cerinte</title>
-  </head>
-  <body>
-    <h1 class="mt-3 text-center"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}" >Grupo Pierola Romania</a></h1>
+</head>
+<body>
+    <h1 class="mt-3 text-center"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}">Grupo Pierola Romania</a></h1>
     <div class="container pt-5">
-        <h5 class="text-center mb-5">Pentru a putea naviga acest website trebuie sa indeplinesti urmatoarele:</h5>
-        <h6 class="text-center">Sa ai cel putin 18 ani impliniti</h6>
-        <h6 class="text-center"> Sa ne acorzi dreptul de a prelucra si colecta datele tale cu caracter personal ( nume, adresa etc ... ) in vederea efectuarii comenzii, conform <a href="https://www.dataprotection.ro/servlet/ViewDocument?id=1262" target="_blank"> GDPR 2018</a>. </h6>
-        <h6 class="text-center">Sa ne permiti a colecta cookies temporar pentru a face disponibile functiile website-ului </h6>
-        <h6 class="text-center mb-5"> Multumim! </h6>
+        <h5 class="text-center mb-5">{% trans "Pentru a putea naviga acest website trebuie sa indeplinesti urmatoarele:" %}</h5>
+        <h6 class="text-center">{% trans "Sa ai cel putin 18 ani impliniti" %}</h6>
+        <h6 class="text-center"> {% trans "Sa ne acorzi dreptul de a prelucra si colecta datele tale cu caracter personal ( nume, adresa etc ... ) in vederea efectuarii comenzii, conform" %} <a href="https://www.dataprotection.ro/servlet/ViewDocument?id=1262" target="_blank"> GDPR 2018</a>. </h6>
+        <h6 class="text-center">{% trans "Sa ne permiti a colecta cookies temporar pentru a face disponibile functiile website-ului" %} </h6>
+        <h6 class="text-center mb-5">{% trans "Multumim!" %}  </h6>
         <div class="row d-md-flex justify-content-center">
             <div class="col-auto">
-                <a class="btn btn-danger text-center" href="{% url 'access_denied' %}">Nu indeplinesc</a>
+                <a class="btn btn-danger text-center" href="{% url 'access_denied' %}">{% trans "Nu indeplinesc" %} </a>
             </div>
             <div class="col-auto">
                 <form method="POST" action="{% url 'requirements' %}">
                     {% csrf_token %}
-                    <button class="btn btn-success text-center" type="submit">Indeplinesc</button>
+                    <button class="btn btn-success text-center" type="submit">{% trans "Indeplinesc" %}</button>
                 </form>
             </div>
         </div>
-        <h6 class="text-center">toate cerintele</h6>
+        <h6 class="text-center">{% trans "toate cerintele" %}</h6>
     </div>
-    
-  </body>
+
+</body>
 </html>
