--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -2,7 +2,7 @@
     <div class="arrow-up arrow-warning"></div>
     <div class="w-100 toast-capper bg-warning"></div>
     <div class="toast-header bg-white text-dark d-flex justify-content-between">
-        <strong class="mr-auto">Warning!</strong>
+        <strong class="mr-auto">{% trans "Warning!" %}</strong>
         <button type="button" class="btn-close close ml-2 mb-1 text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
