--- a/wines/templates/wines/wines.html
+++ b/wines/templates/wines/wines.html
@@ -1,46 +1,47 @@
 {% extends "base.html" %}
 {% load static %}
+{% load i18n %}
 {% block extra_css %}
-  <link type="text/css" rel="stylesheet" href="{% static 'wines/css/wines.css' %}">
+<link type="text/css" rel="stylesheet" href="{% static 'wines/css/wines.css' %}">
 {% endblock %}
 {% block content %}
 
-<div class="container-fluid wine-list" id ="winelist">
-    <h1 class="text-center">Vinuri</h1>
+<div class="container-fluid wine-list" id="winelist">
+    <h1 class="text-center">{% trans "Vinuri"%}</h1>
     {% include 'wines/includes/mobile_filters.html' %}
-    <span class="badge badge-pill badge-warning">Warning</span>
+    <span class="badge badge-pill badge-warning">{% trans "Warning"%}</span>
     <div class="row">
         {% if not wines %}
-            <p class="text-center">Nici un rezultat</p>
+        <p class="text-center">Nici un rezultat</p>
         {% else %}
-            {% for wine in wines %}
-                {% include 'wines/includes/wine_card.html' %}
-            {% endfor %}
+        {% for wine in wines %}
+        {% include 'wines/includes/wine_card.html' %}
+        {% endfor %}
         {% endif %}
     </div>
 </div>
- 
+
 {% endblock %}
 {% block postload_js %}
 {{block.super}}
 <script type="text/javascript">
-$("#filter").change(function (event) {
-    var selector = event.target.id;
-    var selectedVal = $(document.getElementById(selector)).val();
-    var currentUrl = new URL(window.location);
-    if (selectedVal!='reset'){
-            if (selector=='price'){
-                    currentUrl.searchParams.delete('rating');
-                }else if (selector=='rating'){
-                    currentUrl.searchParams.delete('price');
-                }
+    $("#filter").change(function (event) {
+        var selector = event.target.id;
+        var selectedVal = $(document.getElementById(selector)).val();
+        var currentUrl = new URL(window.location);
+        if (selectedVal != 'reset') {
+            if (selector == 'price') {
+                currentUrl.searchParams.delete('rating');
+            } else if (selector == 'rating') {
+                currentUrl.searchParams.delete('price');
+            }
             currentUrl.searchParams.set(selector, selectedVal);
             window.location.replace(currentUrl);
-        }else{
+        } else {
             currentUrl.searchParams.delete(selector);
             window.location.replace(currentUrl);
         }
-});
+    });
 </script>
 {% include 'wines/includes/card_js.html' %}
 {% endblock %}
