--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -20,7 +20,7 @@
             <form method="POST" action="{% url 'profile_view' %}" id="profile_update">
                 {% csrf_token%}
                 {{ form|crispy }}
-                <button class="btn btn-dark rounded-0 float-right">Update</button>
+                <button class="btn btn-dark rounded-0 float-right">{% trans "Update"%}</button>
             </form>
         </div>
         <div class="col-md-12 col-lg-6">
