--- a/wines/templates/wines/wine_details.html
+++ b/wines/templates/wines/wine_details.html
@@ -8,19 +8,19 @@
 <div class="container mb-4">
     <div class="row d-none d-lg-inline">
         <div class="col-12">
-            <h1>Detalii despre vin</h1>
+            <h1>{% trans "Detalii despre vin" %}</h1>
         </div>
     </div>
     <div class="row">
         <h2 class="text-center fw-bold my-5 ">{{wine.name}}</h2>
         <div class="col-sm-12 col-lg-4 d-none d-md-inline">
-            <h5 class="fw-bold">Regiunea</h5>
+            <h5 class="fw-bold">{% trans "Regiunea"%}</h5>
             <hr class="my-0">
             <p>{{wine.region}}</p>
-            <h5 class="fw-bold">Struguri</h5>
+            <h5 class="fw-bold">{% trans "Struguri"%}</h5>
             <hr class="my-0">
             <p>{{wine.grape}}</p>
-            <h5 class="fw-bold">Procesul de obtinere</h5>
+            <h5 class="fw-bold">{% trans "Procesul de obtinere"%}</h5>
             <hr class="my-0">
             <p>{{wine.vinification}}</p>
         </div>
@@ -70,38 +70,38 @@
             </div>
         </div>
         <div class="col-sm-12 d-md-none">
-            <h5 class="fw-bold">Regiunea</h5>
+            <h5 class="fw-bold">{% trans "Regiunea" %}</h5>
             <hr class="my-0">
             <p>{{wine.region}}</p>
-            <h5 class="fw-bold">Struguri</h5>
+            <h5 class="fw-bold">{% trans "Struguri" %}</h5>
             <hr class="my-0">
             <p>{{wine.grape}}</p>
-            <h5 class="fw-bold">Procesul de obtinere</h5>
+            <h5 class="fw-bold">{% trans "Procesul de obtinere" %}</h5>
             <hr class="my-0">
             <p>{{wine.vinification}}</p>
             <!-- imaginea cu vinul-->
         </div>
         <div class="col-sm-12 col-lg-4 ">
             <!--detalii despre vin-->
-            <h5 class="fw-bold">Gustul</h5>
+            <h5 class="fw-bold">{% trans "Gustul" %}</h5>
             <hr class="my-0">
             <p>{{wine.palate}}</p>
-            <h5 class="fw-bold">Maturare</h5>
+            <h5 class="fw-bold">{% trans "Maturare" %}</h5>
             <hr class="my-0">
             <p>{{ wine.aging }}</p>
-            <h5 class="fw-bold">Descrierea culorii</h5>
+            <h5 class="fw-bold">{% trans "Descrierea culorii" %}</h5>
             <hr class="my-0">
             <p>{{ wine.color_details}}</p>
-            <h5 class="fw-bold">Temperatura de servire</h5>
+            <h5 class="fw-bold">{% trans "Temperatura de servire"%} </h5>
             <hr class="my-0">
             <p>{{ wine.serving }}</p>
-            <h5 class="fw-bold">Impachetarea</h5>
+            <h5 class="fw-bold">{% trans "Impachetarea"%}</h5>
             <hr class="my-0">
             <p>{{ wine.boxing }}</p>
-            <h5 class="fw-bold">Ratingul Producatorului</h5>
+            <h5 class="fw-bold">{% trans "Ratingul Producatorului"%}</h5>
             <hr class="my-0">
             <p>{{ wine.rating }} <i class="fas fa-star fa-sm"></i></p>
-            <h5 class="fw-bold">Prima zi pe piata</h5>
+            <h5 class="fw-bold">{% trans "Prima zi pe piata"%}</h5>
             <hr class="my-0">
             <p>{{ wine.first_time_listed }}</p>
         </div>
